Some more updates
Quiz page finished, some changes to the home page

--- a/QuizPage/quiz.html
+++ b/QuizPage/quiz.html
@@ -9,13 +9,10 @@
     <div class="quiz-container">
       <h1 class="quiz-title">Personality Quiz</h1>
       <form class="quiz-form" id="quiz-form">
-        <div class="quiz-question">
-          <h2 class="quiz-question-text"></h2>
-          <div class="quiz-options"></div>
-        </div>
-        <button class="quiz-submit" type="submit">Submit</button>
         <div class="error-message" id="error-message"></div>
       </form>
+      <button class="quiz-submit" type="submit">Submit</button>
+      <a href='/index.html'> <button class="back-to-home" location.href="home.html">Back Home</button></a>
     </div>
     <div class="result-container">
       <h1 class="result-title">Results</h1>
@@ -25,3 +22,4 @@
     <script defer src="quiz.js"></script>
   </body>
 </html>
+ 
