--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
   <body>
     <header>
       <div class="logo">
-        <img src="https://pasteboard.co/c6FJTJYr3GHx" alt="Job Search App Logo">
+        <img src="Assets/Jobventure.png" alt="Job Search App Logo">
       </div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Search</a></li>
-          <li><a href="#">Home</a></li>
-			  	<li><button onclick="location.href='QuizPage/quiz.html'">Take the Quiz</button></li>
+          <li><a href="QuizPage/quiz.html">Take the Quiz</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="hero">
-        <h1>Find Your Dream Job Today</h1>
+        <h1>Let Your Passion Follow Your Heart</h1>
         <p>Start your job search now with our easy-to-use search bar.</p>
         <form action="#" method="get">
           <input type="text" name="job" placeholder="Enter a job title...">
@@ -53,7 +52,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright © 2023 Job Search App.</p>
+      <p>Copyright © 2023 Job Venture.</p>
     </footer>
   </body>
 </html>
