More jobs added

--- a/QuizPage/quiz.html
+++ b/QuizPage/quiz.html
@@ -12,13 +12,8 @@
         <div class="error-message" id="error-message"></div>
       </form>
       <button class="quiz-submit" type="submit">Submit</button>
-      <a href='/index.html'> <button class="back-to-home" location.href="home.html">Back Home</button></a>
+      <a href='/home.html'> <button class="back-to-home" location.href="home.html">Back Home</button></a>
     </div>
-    <div class="result-container">
-      <h1 class="result-title">Results</h1>
-      <div class="result-items"></div>
-    </div>
-
     <script defer src="quiz.js"></script>
   </body>
 </html>
