--- a/home.html
+++ b/home.html
@@ -8,12 +8,10 @@
   <body style="display: flex; flex-direction: column">
     <header>
       <div class="logo">
-        <img src="Assets/Jobventure.png" alt="Job Search App Logo" />
+        <a  href="home.html"><img src="Assets/Jobventure.png" alt="Job Search App Logo" /></a>
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Search</a></li>
           <li><a href="QuizPage/quiz.html">Take the Quiz</a></li>
         </ul>
       </nav>
@@ -21,7 +19,7 @@
     <main>
       <section class="hero">
         <h1>Let Your Passion Follow Your Heart</h1>
-        <p>Start your job search now with our easy-to-use search bar.</p>
+        <p>Take the <a href="/QuizPage/quiz.html">quiz</a> to list jobs you may be a perfect match for or use the search function below.</p>
         <form action="" method="get">
           <input type="text" name="job" placeholder="Enter a job title..." />
           <button type="submit">Search</button>
@@ -29,7 +27,6 @@
       </section>
       <section class="job-listings" id="job_list">
         <h2>Job Listings</h2>
-        <!-- more job listings here -->
       </section>
       <script src="src/job_indexing.js"></script>
     </main>
