Updated the CSS files on home page and quiz page.

--- a/QuizPage/quiz.html
+++ b/QuizPage/quiz.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="quiz-container">
+      <img src="https://www.mydiscprofile.com/en-us/_images/report-type-brainstormer.png" alt="Personality Image" style="width:110px;height:90px;">
       <h1 class="quiz-title">Personality Quiz</h1>
       <form class="quiz-form" id="quiz-form">
         <div class="error-message" id="error-message"></div>
