--- a/home.html
+++ b/home.html
@@ -19,14 +19,15 @@
     <main>
       <section class="hero">
         <h1>Let Your Passion Follow Your Heart</h1>
-        <p>Take the <a href="/QuizPage/quiz.html">quiz</a> to list jobs you may be a perfect match for or use the search function below.</p>
+        <p> <i> Take the <a href="QuizPage/quiz.html">quiz</a> to list jobs you may be a perfect match for or use the search function below.</p> </i>
+        <img src="https://images.squarespace-cdn.com/content/v1/59b197d98dd0417b88f2355f/1565708696198-SZMU0HIDT6VZW4WJEKIF/Jobs+and+Hope+workers+AdobeStock_196042217.png" alt="Career Image" style="width:650px;height:200px;">
         <form action="" method="get">
           <input type="text" name="job" placeholder="Enter a job title..." />
           <button type="submit">Search</button>
         </form>
       </section>
       <section class="job-listings" id="job_list">
-        <h2>Job Listings</h2>
+        <h2>Job Listings:</h2>
       </section>
       <script src="src/job_indexing.js"></script>
     </main>
