--- a/home.html
+++ b/home.html
@@ -28,6 +28,9 @@
       </section>
       <section class="job-listings" id="job_list">
         <h2>Job Listings:</h2>
+        <div class="currentTraits">
+
+        </div>
       </section>
       <script src="src/job_indexing.js"></script>
     </main>
