More and More Functions
Added results to home page,
Added more traits and questions and jobs
Logo looks clearer
Switched Submit button with Home button

--- a/home.html
+++ b/home.html
@@ -26,11 +26,14 @@
           <button type="submit">Search</button>
         </form>
       </section>
+      <p style="justify-content: center; display: flex; font-size: larger;">        
+        Your traits:
+        </br>
+      </p>
+      <div class="trait-listings" id="traits">
+      </div>
       <section class="job-listings" id="job_list">
         <h2>Job Listings:</h2>
-        <div class="currentTraits">
-
-        </div>
       </section>
       <script src="src/job_indexing.js"></script>
     </main>
